[package]
name = "regex_text"
version = "0.1.0"
authors = ["Bryce Verdier <bryceverdier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"

[profile.release]
lto = "fat"
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]
